FIX: outline dark emoji's overflowing Server Guide

--- a/files/discord-mods/themes/snippets/outline-dark-emojis.css
+++ b/files/discord-mods/themes/snippets/outline-dark-emojis.css
@@ -2,7 +2,7 @@
  * @name Outline Dark Emojis
  * @author asportnoy#6969 && GreenMan36
  * @authorLink https://github.com/asportnoy
- * @version 17.12.23b
+ * @version 17.12.23c
  * @description A small snippet that makes dark emojis have a outline for visibility. ALL credits to @asportnoy#6969. I, GreenMan36#0633 made small edits and additions to the snippet.
 */
 
@@ -24,7 +24,7 @@
 }
 
 /* fixes glow cutoff at message edges, looks weird */
-div[class*="messageContent__"]:has(span[class*="emojiContainer__"]) {
+div[class*="messageContent__"]:not([class^="lineClamp"]):has(span[class*="emojiContainer__"]) {
   overflow: visible;
 }
 
